# spendinggovua_api

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
app/: batch_export.py  cli.py  main.py  models.py  settings.py  spending_client.py  zip_export.py
app/static/: app.css  app.js  index.html
docs/: github-about.md
scripts/: build_delivery_bundle.py  export_form2_html_zip.py
spendinggovua_api/: __main__.py  analytics.py  batch_export.py  cli.py  main.py  models.py  report_render.py  settings.py  spending_client.py
spendinggovua_api/static/: app.css  app.js  index.html
tests/: test_analytics.py  test_search_api.py
