[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spendinggovua-api"
version = "0.1.0"
description = "FastAPI wrapper for extracting reports from spending.gov.ua"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.1,<1.0.0",
  "playwright>=1.53.0,<2.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["static/*"]
